fix: fix text not fitting the container. fix: fix crossing out an item when double ckicking. feat: add new features description

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,10 @@ ol li:nth-child(even){background: #dfdfdf;}
 
 .strike{text-decoration: line-through;}
 
+li{
+	word-wrap: break-word;
+}
+
 li:hover{
   cursor: pointer;
  }
